--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,7 @@ dependencies {
 heroku {
 	appName = "pit-cities-app"
 	includes = ["build/libs/cities-api-0.0.1-SNAPSHOT.jar"]
+	includeBuildDir = false
 	processTypes(
 			web: "java -jar build/libs/cities-api-0.0.1-SNAPSHOT.jar"
 	)
